--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -2,7 +2,7 @@
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: sqlite3
-  database: db/test.sqlite3
+  database: db/dev.sqlite3
   pool: 5
   timeout: 5000
 
@@ -17,6 +17,12 @@ test:
 
 production:
   adapter: sqlite3
-  database: db/test.sqlite3
+  database: db/prod.sqlite3
+  pool: 5
+  timeout: 5000
+  
+portal:
+  adapter: sqlite3
+  database: db/portal.sqlite3
   pool: 5
   timeout: 5000
